done with accordian for now

--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -118,7 +118,7 @@
                 <div class="text-center col-md-4">
                     <h5>Role</h5>
                     <b1>Designer <br>
-                    Researcher</b1>
+                    Overviewer</b1>
                 </div>
 
                 <div class="text-center col-md-4">
@@ -139,20 +139,19 @@
             </div>
 
             <div class="UXCaseNav row gx-0 mb-lg-8">
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Research">Research</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Definition">Definition</a>
+                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Overview">Overview</a>
                 <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Ideation">Ideation</a>
+                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Analysis">Analysis</a>
                 <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Prototyping">Prototyping</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Testing">Testing</a>
-                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Conclusion">Conclusion</a>
+                <a class="col-auto mx-4 hvr-sweep text-center" href="#TD_Final">Final Product</a>
             </div>
         </div>
 
-    <!-- Research ################################################################-->
-        <div class="container px-4 px-lg-5" id="TD_Research">
+    <!-- Overview ################################################################-->
+        <div class="container px-4 px-lg-5" id="TD_Overview">
             <div class="">
                 <p class="leadingLine text-nav text-muted mb-5">
-                    Research
+                    Overview
                 </p>
                 <p class="playFair mb-md-5">
                     Coming soon
@@ -169,12 +168,12 @@
         </div>
     </section>
 
-    <!-- Definition ################################################################-->
-    <section id="TD_Definition">
+    <!-- Ideation ################################################################-->
+    <section id="TD_Ideation">
         <div class="container px-4 px-lg-5 d-flex">
             <div class="">
                 <p class="leadingLine text-nav text-muted mb-5">
-                    Definition
+                    Ideation
                 </p>
                 <p class="playFair mb-md-5">
                     Coming soon
@@ -192,12 +191,12 @@
         </div>
     </section>
 
-    <!-- Ideation ################################################################-->
+    <!-- Analysis ################################################################-->
     <section style="padding: 9.375rem 0;">
-        <div class="container px-4 px-lg-5" id="TD_Ideation">
+        <div class="container px-4 px-lg-5" id="TD_Analysis">
             <div class="">
                 <p class="leadingLine text-nav text-muted">
-                    Ideation
+                    Analysis
                 </p>
                 <p class="playFair mb-md-5 mb-5">
                     Coming soon
@@ -238,11 +237,11 @@
         </div>
     </section>
 
-    <!-- Testing ################################################################-->
-    <div class="container px-4 px-lg-5" id="TD_Testing">
-        <div class="" style="margin: 9.375rem 0;">
+    <!-- Final ################################################################-->
+    <div class="container px-4 px-lg-5" id="TD_Final">
+        <div class="">
             <p class="leadingLine text-nav text-muted mb-5">
-                Testing
+                Final Product
             </p>
             <p class="playFair mb-md-5">
                 Look! I get it.
@@ -256,62 +255,37 @@
                 <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG mt-5">
             </div>
         </div>
-    </div>
-
-    <!-- Conclusion ################################################################-->
-    <section id="TD_Conclusion">
-        <div class="container px-4 px-lg-5">
-            <div class="">
-                <p class="leadingLine text-nav text-muted mb-5">
-                    Conclusion
-                </p>
-                <div class="">
-                    <div class="mb-5">
-                        <p class="playFair mb-md-5">
-                            Wow!!
+        <div class="accordion accordion-flush mt-5 pt-5" id="accordionFlushExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        <p class="my-0">
+                            Ok fine here's the <b>Mobile Version</b>.
                         </p>
-                        <div class="col-sm-0 col-md-8 pb-5">
-                            <b1>
-                                Did you seriously scroll all the way down here?
-                            </b1>
-                        </div>
+                    </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body row col-auto">
+                        <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FpzVGkfYHWM7UydLYVAz9hF%2FT3-NavigationProto-(Copy)%3Fnode-id%3D506%253A80%26scaling%3Dscale-down%26page-id%3D301%253A82%26starting-point-node-id%3D506%253A80" allowfullscreen></iframe>
                     </div>
                 </div>
-                <p class="leadingLine text-nav text-muted my-5">
-                    Final Prototype
-                </p>
-                <div class="accordion accordion-flush" id="accordionFlushExample">
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                                <p class="my-0">
-                                    Ok fine here's the <b>Mobile Version</b>.
-                                </p>
-                            </button>
-                        </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body row col-auto">
-                                <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FpzVGkfYHWM7UydLYVAz9hF%2FT3-NavigationProto-(Copy)%3Fnode-id%3D506%253A80%26scaling%3Dscale-down%26page-id%3D301%253A82%26starting-point-node-id%3D506%253A80" allowfullscreen></iframe>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingTwo">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                                <p class="my-0">
-                                    Also check out the <b>Desktop Version</b>.
-                                </p>
-                            </button>
-                        </h2>
-                        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body row col-auto">
-                                <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FpzVGkfYHWM7UydLYVAz9hF%2FT3-NavigationProto-(Copy)%3Fnode-id%3D562%253A824%26scaling%3Dscale-down%26page-id%3D562%253A138%26starting-point-node-id%3D562%253A824" allowfullscreen></iframe>
-                            </div>
-                        </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        <p class="my-0">
+                            Also check out the <b>Desktop Version</b>.
+                        </p>
+                    </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body row col-auto">
+                        <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FpzVGkfYHWM7UydLYVAz9hF%2FT3-NavigationProto-(Copy)%3Fnode-id%3D562%253A824%26scaling%3Dscale-down%26page-id%3D562%253A138%26starting-point-node-id%3D562%253A824" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
         <div class="mb-sm-4 UXCaseSwap">
             <div class="">
