Worked on AFA CaseStudy

--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="Leon Dinh" content="Portfolio of Product Designer and 3D Artist, Leon Dinh" />
-    <title>Leon Dinh - UX Case - TreasuryDirect.gov Redesign</title>
+    <title>UX_TreasuryDirect.gov Redesign</title>
     <link rel="icon" type="image/x-icon" href="../assets/favicon.ico" />
 
     <!-- Font Awesome icons (free version)-->
@@ -67,7 +67,7 @@
                                         <li class="fw-normal text-muted mb-md-3 followingLine" style="padding-left: 1rem;">Case Studies</li>
                                         <li><a class="dropdown-item" href="./UX_VTP.html">Virtual Teaching Platform</a></li>
                                         <li><a class="dropdown-item" href="#">TreasuryDirect.gov</a></li>
-                                        <li><a class="dropdown-item" href="#">ArtsForAll.com</a></li>
+                                        <li><a class="dropdown-item" href="./UX_AFA.html">ArtsForAll.com</a></li>
                                         <li><a class="dropdown-item" href="#">Odysseia</a></li>
                                     </ul>
                                 </div>
@@ -195,7 +195,7 @@
     <section style="padding: 9.375rem 0;">
         <div class="container px-4 px-lg-5" id="TD_Analysis">
             <div class="">
-                <p class="leadingLine text-nav text-muted">
+                <p class="leadingLine text-nav text-muted mb-5">
                     Analysis
                 </p>
                 <p class="playFair mb-md-5 mb-5">
@@ -294,7 +294,7 @@
             </div>
             <div class="">
                 <p>Next:</p>
-                <a class="hvr-sweep" href="">ArtsForAll.com</a>
+                <a class="hvr-sweep" href="./UX_AFA.html">ArtsForAll.com</a>
             </div>
         </div>
     </section>
