--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                             <li class="fw-normal text-muted mb-md-3 followingLine" style="padding-left: 1rem;">Case Studies</li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
                                             <li><a class="dropdown-item" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
-                                            <li><a class="dropdown-item" href="#">ArtsForAll.com</a></li>
+                                            <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">ArtsForAll.com</a></li>
                                             <li><a class="dropdown-item" href="#">Odysseia</a></li>
                                         </ul>
                                     </div>
@@ -153,7 +153,7 @@
 
                 <div class="row gx-0 UXCase">
                     <div class="order-0 order-lg-0 col-xl-6 col-lg-6">
-                        <a>
+                        <a href="./CaseStudies/UX_AFA.html">
                             <img class="img-fluid UXCaseImg mb-4" src="./assets/img/ArtsForAll_HALF.png" alt="..." />
                         </a>
                     </div>
@@ -167,7 +167,7 @@
                                 <p class="UXCaseTag">Figma</p>
                                 <p class="UXCaseTag">Illustrator</p>
                             </div>
-                            <a class="hvr-sweep UXCaseButton" href="">View Case Study</a>
+                            <a class="hvr-sweep UXCaseButton" href="./CaseStudies/UX_AFA.html">View Case Study</a>
                         </div>
                     </div>
                 </div>
