more mobile fixed

--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -266,7 +266,7 @@
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body row col-auto">
-                        <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FpzVGkfYHWM7UydLYVAz9hF%2FT3-NavigationProto-(Copy)%3Fnode-id%3D506%253A80%26scaling%3Dscale-down%26page-id%3D301%253A82%26starting-point-node-id%3D506%253A80" allowfullscreen></iframe>
+                        <p>Hold up champ, more coming soon</p>
                     </div>
                 </div>
             </div>
@@ -280,7 +280,9 @@
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body row col-auto">
-                        <iframe src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FpzVGkfYHWM7UydLYVAz9hF%2FT3-NavigationProto-(Copy)%3Fnode-id%3D562%253A824%26scaling%3Dscale-down%26page-id%3D562%253A138%26starting-point-node-id%3D562%253A824" allowfullscreen></iframe>
+                        <p>
+                            Hold up champ
+                        </p>
                     </div>
                 </div>
             </div>
