--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -121,8 +121,8 @@
                 <div class="text-center col-md-4">
                     <h5>Team</h5>
                     <b1>
-                        Maria Telles (Designer) <br>
-                        Laura Isaac (Designer)
+                        Maria Telles<br>
+                        Laura Isaac
                     </b1>
                 </div>
 
@@ -298,7 +298,7 @@
     <section class="" id="AFA_Prototyping" style="padding: 9.375rem 0;">
         <div class="container px-4 px-lg-5">
             <p class="leadingLine text-nav text-muted mb-5">
-                Prototyping
+                Prototyping workflow
             </p>
             <p class="playFair mb-md-5">
                 Ultilizing the data we gathered from user tests, we were able to fine tune the app to become more user friendly and appealing.
@@ -354,7 +354,7 @@
             </div>
         </div>
 
-        <div class="d-flex mb-sm-9 UXCaseSwap">
+        <div class="d-flex mb-sm-4 UXCaseSwap">
             <div class="d-flex">
                 <p>Previous:</p>
                 <a class="hvr-sweep" href="./UX_TD.html">TreasuryDirect.gov</a>
