--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -118,14 +118,14 @@
                 <div class="text-center col-md-4">
                     <h5>Role</h5>
                     <b1>Designer <br>
-                    Overviewer</b1>
+                    Researcher</b1>
                 </div>
 
                 <div class="text-center col-md-4">
                     <h5>Team</h5>
                     <b1>
-                        Sherlene Woodall (Designer) <br>
-                        Emmanuel Kastrenakes (Designer)
+                        Sherlene Woodall<br>
+                        Emmanuel Kastrenakes
                     </b1>
                 </div>
 
