--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -124,9 +124,9 @@
                 <div class="text-center col-md-4">
                     <h5>Team</h5>
                     <b1>
-                        Jacqueline VanWert (Designer) <br>
-                        Sherlene Woodall (Designer) <br>
-                        Frederick Macon (Designer)
+                        Jacqueline VanWert<br>
+                        Sherlene Woodall<br>
+                        Frederick Macon
                     </b1>
                 </div>
 
@@ -330,7 +330,7 @@
             </div>
         </div>
 
-        <div class="d-flex mb-sm-9 UXCaseSwap justify-content-end">
+        <div class="d-flex mb-sm-4 UXCaseSwap justify-content-end">
             <div class="d-flex">
                 <p>Next:</p>
                 <a class="hvr-sweep" href="./UX_TD.html">TreasuryDirect.gov</a>
