tweak the navigation bar some more

--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -45,7 +45,6 @@
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="../index.html">LD</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
                 <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -62,9 +61,9 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <div class="row mainDropdown">
-                                <div class="col-md-7">
+                                <div class="col-md-7 order-1 order-md-0 mt-3 mt-md-0">
                                     <ul class="list-unstyled">
-                                        <li class="fw-normal text-muted mb-md-3 followingLine" style="padding-left: 1rem;">Case Studies</li>
+                                        <li class="followingLine dropDownCat">Case Studies</li>
                                         <li><a class="dropdown-item" href="./UX_VTP.html">Virtual Teaching Platform</a></li>
                                         <li><a class="dropdown-item" href="./UX_TD.html">TreasuryDirect.gov</a></li>
                                         <li><a class="dropdown-item" href="#">ArtsForAll.com</a></li>
@@ -72,9 +71,9 @@
                                     </ul>
                                 </div>
 
-                                <div class="col-md-5">
+                                <div class="col-md-5 order-0 order-md-1">
                                     <ul class="list-unstyled">
-                                        <li class="fw-normal text-muted mb-md-3 followingLine" style="padding-left: 1rem;">Others</li>
+                                        <li class="followingLine dropDownCat">Others</li>
                                         <li><a class="dropdown-item" href="#">Illustrations</a></li>
                                         <li><a class="dropdown-item" href="#">3D Assets</a></li>
                                     </ul>
