fixed padding on the mobile version

--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -187,13 +187,13 @@
                     In the research process, each team member conducted at least one interview with potential user to get the first insights.
                 </p>
                 <div class="row d-flex">
-                    <div class="col-9 mx-auto">
+                    <div class="col-11 col-md-9 mx-md-auto mx-sm-0">
                         <b1>
                             Through the <b>5 interviews</b>, we could understand their behaviors, opinions, past experiences, and suggestions for potential organizations. We prepared questions strategically divided into warm up questions, past experiences, and suggestions for organizations.
                             <br>
                             <br>
                             We got a lot of important insights from our interviews that helped us to understand how the users behave. 
-                        </br>
+                        </b1>
                     </div>
                     <div class="row d-flex justify-content-center mt-4">
                         <img src="../assets/img/UX_AFA/UX_AFA_quote01.svg" alt="" class="left">
