--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -110,7 +110,7 @@
     <!-- Navigation ################################################################-->
     <section class="" style="margin: 9.375rem 0;">
         <div class="container px-4 px-lg-5">
-            <div class="UXCaseTeam row gx-0">
+            <div class="UXCaseTeam row gx-0 mx-5 mx-lg-0">
                 <div class="text-center col-md-4">
                     <h5>Role</h5>
                     <b1>Designer <br>
@@ -254,7 +254,7 @@
                     To begin our design we had to pinpoint the issues from the current site that we wanted to focus on by conducting a heuristic evaluation.
                 </p>
                 <div class="d-flex pt-3 pb-5">
-                    <div class="row col-md-7 pe-md-4">
+                    <div class="row col-md-7 pe-md-4 mx-auto">
                         <b1>
                             We pin point few of the problems as priorities.
                             <br>
@@ -264,9 +264,9 @@
                             <br>
                             Secondly, we had a lot of contents, which we decided to condense with the same goal of making it less overwhelming for the user.
                         </b1>
-                        <img src="../assets/img/UX_AFA/undraw_children_re_c37f.svg" alt="" style="opacity: 0.15; filter: saturate(0%);" class="mt-md-4 align-self-end">
+                        <img src="../assets/img/UX_AFA/undraw_children_re_c37f.svg" alt="" style="opacity: 0.15; filter: saturate(0%);" class="mt-5 align-self-end">
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-md-5 AFA_EvalImage">
                         <img src="../assets/img/UX_AFA/UX_AFA_og.png" alt="" class="img-fluid">
                     </div>
                 </div>
