--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -113,7 +113,7 @@
     <!-- Navigation ################################################################-->
     <section class="" style="margin: 9.375rem 0;">
         <div class="container px-4 px-lg-5">
-            <div class="UXCaseTeam row gx-0">
+            <div class="UXCaseTeam row gx-0 mx-5 mx-lg-0">
                 <div class="text-center col-md-4">
                     <h5>Role</h5>
                     <b1>Designer <br>
