--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -113,7 +113,7 @@
     <!-- Navigation ################################################################-->
     <section class="" style="margin: 9.375rem 0;">
         <div class="container px-4 px-lg-5">
-            <div class="UXCaseTeam row gx-0">
+            <div class="UXCaseTeam row gx-0 mx-5 mx-lg-0">
                 <div class="text-center col-md-4">
                     <h5>Role</h5>
                     <b1>Designer <br>
@@ -202,8 +202,7 @@
                 </p>
                 <div class="d-flex">
                     <img src="../assets/img/UX_VTP/undraw_newspaper_re_syf5.svg" alt="" class="col-md-5 align-self-end imgSVG">
-                    <div class="col-md-1"></div>
-                    <div class="col-md-6 align-self-center">
+                    <div class="col-md-6 align-self-center ms-0 ms-md-5">
                         <b1 class="">
                             As a team we then decided that our solution for this was to create an all-in-one virtual teaching platform that teachers could use to prepare lessons in a quick and seamless way.
                             </br>
@@ -227,7 +226,7 @@
                     Using the "I like, I wish, What If" method, we were able to generate ideas that could be used within the app.
                 </p>
                 <div class="">
-                    <div class="mb-5 col-9 mx-auto">
+                    <div class="mb-5 col-0 col-md-9 mx-auto">
                         <b1 class="">
                             Using those ideas we created a feature priotization matrix, to see which of them were integal to our creation - such as having a gradebook and creating lessons available right on the app.                            
                             </br>
@@ -253,7 +252,7 @@
                     Prototyping
                 </p>
                 <div class="">
-                    <div class="mb-5 col-9 mx-auto">
+                    <div class="mb-5 col-0 col-md-9 mx-auto">
                         <b1>
                             We started first with a mind-map to help our team visualize what would be covered in each area of our navigation, and how we would cohesively design it. We then created a Figma file that allowed us to build out wireframes of each section and put in the interactions that users would use in order to sign into the app, create a lesson, and review the gradebook.
                         </b1>
