--- a/CaseStudies/UX_AFA.html
+++ b/CaseStudies/UX_AFA.html
@@ -299,25 +299,16 @@
             <h6 class="leadingLine text-nav text-muted mb-5">
                 Prototyping
             </h6>
-            <h6 class="playFair mb-5">
+            <h6 class="playFair mb-5 pt-5">
                 Prototyping workflow:
             </h6>
-            <div class="row justify-content-center mt-5 mx-auto d-none d-sm-flex">
-                <img src="../assets/img/UX_AFA/UX_AFA_workflow01.svg" alt="" class="col-3">
-                <img src="../assets/img/UX_AFA/UX_AFA_workflow02.svg" alt="" class="col-3">
-                <img src="../assets/img/UX_AFA/UX_AFA_workflow03.svg" alt="" class="col-3">
-                <img src="../assets/img/UX_AFA/UX_AFA_workflow04.svg" alt="" class="col-3">
-                <img src="../assets/img/UX_AFA/UX_AFA_workflow05.svg" alt="" class="col-3">
-                <img src="../assets/img/UX_AFA/UX_AFA_workflow06.svg" alt="" class="col-3">
-                <img src="../assets/img/UX_AFA/UX_AFA_workflow07.svg" alt="" class="col-3">
-            </div>
-            <div class="row mt-5 mx-auto d-none d-md-block">
+            <div class="row my-5 mx-auto d-none d-md-block">
                 <img src="../assets/img/UX_AFA/UX_AFA_workflowHuge.svg" alt="" class="px-3">
             </div>
-            <div class="row mt-5 mx-auto d-none d-sm-block d-md-none">
+            <div class="row my-5 mx-auto d-none d-sm-block d-md-none">
                 <img src="../assets/img/UX_AFA/UX_AFA_workflowMid.svg" alt="" class="px-3">
             </div>
-            <div class="justify-content-center mt-5 col-10 mx-auto d-block d-sm-none">
+            <div class="justify-content-center my-5 col-10 mx-auto d-block d-sm-none">
                 <h6 class="text-decoration-underline">1. Mind Map:</h6>
                 <p class="ps-4 pb-3">Re-mapping the content</p>
                 <h6 class="text-decoration-underline">2. User Flow:</h6>
@@ -334,6 +325,10 @@
                 <h6 class="text-decoration-underline">7. Iterations:</h6>
                 <p class="ps-4">Revising the website for better flow with user suggested changes</p>
             </div>
+            <h6 class="playFair my-5 pt-5">
+                Low-fidelity wireframe
+            </h6>
+            <img src="../assets/img/UX_AFA/UX_AFA_LoFi.png" alt="" class="img-fluid">
         </div>
     </section>
 
