--- a/About.html
+++ b/About.html
@@ -66,7 +66,7 @@
                                         <li class="followingLine dropDownCat">Case Studies</li>
                                         <li><a class="dropdown-item" href="./CaseStudies/UX_VTP.html">Virtual Teaching Platform</a></li>
                                         <li><a class="dropdown-item" href="./CaseStudies/UX_TD.html">TreasuryDirect.gov</a></li>
-                                        <li><a class="dropdown-item" href="#">ArtsForAll.com</a></li>
+                                        <li><a class="dropdown-item" href="./CaseStudies/UX_AFA.html">ArtsForAll.com</a></li>
                                         <li><a class="dropdown-item" href="#">Odysseia</a></li>
                                     </ul>
                                 </div>
