--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -28,10 +28,10 @@
             'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
             })(window,document,'script','dataLayer','GTM-WVDNXQD');
     </script>
-            <!-- End Google Tag Manager -->
+    <!-- End Google Tag Manager -->
 </head>
 
-<!-- ########################################################################################################### -->
+<!-- ################################### -->
 
 <body class="caseStudyTD">
     <!-- Google Tag Manager (noscript) -->
@@ -110,7 +110,7 @@
         </div>
     </header>
 
-    <!-- Navigation ################################################################-->
+    <!-- Navigation #####################################-->
     <section class="" style="margin: 9.375rem 0;">
         <div class="container px-4 px-lg-5">
             <div class="UXCaseTeam row gx-0">
@@ -146,7 +146,7 @@
             </div>
         </div>
 
-    <!-- Overview ################################################################-->
+    <!-- Overview #########################-->
         <div class="container px-4 px-lg-5" id="TD_Overview">
             <div class="">
                 <h6 class="leadingLine text-nav text-muted mb-5">
@@ -167,7 +167,7 @@
         </div>
     </section>
 
-    <!-- Ideation ################################################################-->
+    <!-- Ideation ######################-->
     <section id="TD_Ideation">
         <div class="container px-4 px-lg-5 d-flex">
             <div class="">
@@ -190,7 +190,7 @@
         </div>
     </section>
 
-    <!-- Analysis ################################################################-->
+    <!-- Analysis ######################-->
     <section style="padding: 9.375rem 0;">
         <div class="container px-4 px-lg-5" id="TD_Analysis">
             <div class="">
@@ -213,7 +213,7 @@
         </div>
     </section>
 
-    <!-- Prototyping ################################################################-->
+    <!-- Prototyping #####################-->
     <section id="TD_Prototyping">
         <div class="container px-4 px-lg-5">
             <div class="">
@@ -236,7 +236,7 @@
         </div>
     </section>
 
-    <!-- Final ################################################################-->
+    <!-- Final #################-->
     <div class="container px-4 px-lg-5" id="TD_Final">
         <div class="">
             <h6 class="leadingLine text-nav text-muted mb-5">
