--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -28,10 +28,10 @@
             'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
             })(window,document,'script','dataLayer','GTM-WVDNXQD');
     </script>
-            <!-- End Google Tag Manager -->
+    <!-- End Google Tag Manager -->
 </head>
 
-<!-- ########################################################################################################### -->
+<!-- ################################### -->
 
 <body class="caseStudyVTP">
     <!-- Google Tag Manager (noscript) -->
@@ -110,7 +110,7 @@
         </div>
     </header>
 
-    <!-- Navigation ################################################################-->
+    <!-- Navigation ###########################-->
     <section class="" style="margin: 9.375rem 0;">
         <div class="container px-4 px-lg-5">
             <div class="UXCaseTeam row gx-0">
@@ -148,7 +148,7 @@
             </div>
         </div>
 
-    <!-- Research ################################################################-->
+    <!-- Research ##########################-->
         <div class="container px-4 px-lg-5" id="VTP_Research">
             <div class="">
                 <h6 class="leadingLine text-nav text-muted mb-5">
@@ -189,7 +189,7 @@
         </div>
     </section>
 
-    <!-- Definition ################################################################-->
+    <!-- Definition ##################-->
     <section id="VTP_Definition">
         <div class="container px-4 px-lg-5 d-flex">
             <div class="">
@@ -214,7 +214,7 @@
         </div>
     </section>
 
-    <!-- Ideation ################################################################-->
+    <!-- Ideation ################-->
     <section style="padding: 9.375rem 0;">
         <div class="container px-4 px-lg-5" id="VTP_Ideation">
             <div class="">
@@ -243,7 +243,7 @@
         </div>
     </section>
 
-    <!-- Prototyping ################################################################-->
+    <!-- Prototyping ###################-->
     <section id="VTP_Prototyping">
         <div class="container px-4 px-lg-5">
             <div class="">
@@ -266,7 +266,7 @@
         </div>
     </section>
 
-    <!-- Testing ################################################################-->
+    <!-- Testing #################-->
     <div class="container px-4 px-lg-5" id="VTP_Testing">
         <div class="" style="margin: 9.375rem 0;">
             <h6 class="leadingLine text-nav text-muted mb-5">
@@ -293,7 +293,7 @@
         </div>
     </div>
 
-    <!-- Conclusion ################################################################-->
+    <!-- Conclusion ################-->
     <section id="VTP_Conclusion">
         <div class="container px-4 px-lg-5">
             <div class="">
