--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
             })(window,document,'script','dataLayer','GTM-WVDNXQD');
         </script>
-            <!-- End Google Tag Manager -->
+        <!-- End Google Tag Manager -->
     </head>
 
-<!-- ############################################################################################################ -->
+<!-- ################## -->
 
     <body id="page-top">
         <!-- Google Tag Manager (noscript) -->
@@ -104,9 +104,9 @@
         <!-- Projects-->
         <section class="projects-section" id="projects">
             <div class="container px-4 px-lg-5">
-                <p class="leadingLine text-nav text-muted mb-lg-6">
+                <h6 class="leadingLine text-nav text-muted mb-5 pb-5 pb-lg-0 mb-lg-6">
                     Featured Projects
-                </p>
+                </h6>
                 <!-- Featured Project Row-->
                 <div class="row gx-0 UXCase">
                     <div class="order-0 order-lg-0 col-xl-6 col-lg-6">
